--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
-CTYPE html>
+<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+	<title>Eagle Eye - Login</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Bootstrap slider" />
+	
+	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
+	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
+	<script type="text/javascript" src="engine1/jquery.js"></script>	<script src="https://www.youtube.com/iframe_api"></script>
+
+	<!-- End WOWSlider.com HEAD section -->
+
+</head>
+<body style="background:#03586a;background: radial-gradient(#27788A, #2A3F54);margin:auto;  border-radius: 6px;
+  height: 940px;">
+	
+	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
+	<div id="wowslider-container1">
+	<div class="ws_images"><ul>
+		<li><img src="data1/images/slide3.jpg" alt="Eagle Eye Journey" title="Eagle Eye Journey" id="wows1_0"/></li>
+		<li><img src="data1/images/slide4.jpg" alt="Business Outcome" title="Business Outcome" id="wows1_1"/></li>
+		<li><img src="data1/images/slide5.jpg" alt="New Features" title="New Features" id="wows1_2"/></li>
+		<li><img src="data1/images/slide6.jpg" alt="Architecture" title="Architecture" id="wows1_3"/></a></li>
+		<li><iframe width="100%" height="100%" src="https://www.youtube.com/embed/CYum8AYGaVk?autoplay=0&rel=0&enablejsapi=1&playerapiid=ytplayer&wmode=transparent" frameborder="0" allowfullscreen></iframe><img src="data1/images/cyum8aygavk.png" alt="Eagle Eye Introduction final" title="Eagle Eye Introduction" id="wows1_4"/></li>
+	</ul></div>
+	<div class="ws_bullets"><div>
+		<a href="#" title="Eagle Eye Journey"><span><img src="data1/tooltips/slide3.jpg" alt="Eagle Eye Journey"/>1</span></a>
+		<a href="#" title="Business Outcome"><span><img src="data1/tooltips/slide4.jpg" alt="Business Outcome"/>2</span></a>
+		<a href="#" title="New Features"><span><img src="data1/tooltips/slide5.jpg" alt="New Features"/>3</span></a>
+		<a href="#" title="Architecture"><span><img src="data1/tooltips/slide6.jpg" alt="Architecture"/>4</span></a>
+		<a href="#" title="Eagle Eye Introduction"><span><img src="data1/tooltips/cyum8aygavk.png" alt="Eagle Eye Introduction"/>5</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com/vi">bootstrap slider</a> by WOWSlider.com v8.7</div>
+	<div class="ws_shadow"></div>
+	</div>	
+
+	<script type="text/javascript" src="engine1/wowslider.js"></script>
+	<script type="text/javascript" src="engine1/script.js"></script>
+	<!-- End WOWSlider.com BODY section -->
+
 </body>
 </html>
-
