update the content of home page

--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,4 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested in me coding for you or saving your neighborhood!
+欢迎来邮件或者加QQ聊聊关于编码，足球，旅行及各色主题。 
