--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About
 ---
 ## <u>关于</u>
 
-### 一名普通Web及iOS软件工程师， 喜欢将指尖的敲击转化成电脑和网络世界的呈现。 
+### 一名Web及iOS软件工程师， 喜欢将指尖的敲击转化成手机和网络世界的呈现。 
 
 ### 钟情于旅行带来的新奇， 也会沉浸于文字里各色人物的生死沉浮。 
 
