--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 ---
 layout: home
 breadcrumb:
-  -
-    label: Posts
-
+    - label: Posts
 # Index page
 # v2.0
 # https://github.com/cotes2020/jekyll-theme-chirpy
 # © 2017-2019 Cotes Chung
 # MIT License
 ---
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M3P4P560S"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-5M3P4P560S");
+</script>
